@@ -101,7 +101,7 @@ DELUGE_VER = deluge.common.get_version()
 
 
 class Core(component.Component):
-    def __init__(self, listen_interface=None, read_only_config_keys=None):
+    def __init__(self, listen_interface=None, outgoing_interface=None, read_only_config_keys=None):
         component.Component.__init__(self, 'Core')
 
         # Start the libtorrent session.
@@ -163,6 +163,13 @@ class Core(component.Component):
                 self.config['listen_interface'] = listen_interface
             else:
                 log.error('Invalid listen interface (must be IP Address): %s', listen_interface)
+        self.__old_outgoing_interface = None
+        if outgoing_interface:
+            if deluge.common.is_ip(outgoing_interface):
+                self.__old_outgoing_interface = self.config['outgoing_interface']
+                self.config['outgoing_interface'] = outgoing_interface
+            else:
+                log.error('Invalid outgoing interface (must be IP Address): %s', outgoing_interface)
 
         # New release check information
         self.__new_release = None
@@ -196,6 +203,9 @@ class Core(component.Component):
         # We stored a copy of the old interface value
         if self.__old_interface:
             self.config['listen_interface'] = self.__old_interface
+
+        if self.__old_outgoing_interface:
+            self.config['outgoing_interface'] = self.__old_outgoing_interface
 
         # Make sure the config file has been saved
         self.config.save()
