@@ -65,11 +65,12 @@ def is_daemon_running(pid_file):
 class Daemon(object):
     """The Deluge Daemon class"""
 
-    def __init__(self, listen_interface=None, interface=None, port=None, standalone=False,
+    def __init__(self, listen_interface=None, outgoing_interface=None, interface=None, port=None, standalone=False,
                  read_only_config_keys=None):
         """
         Args:
             listen_interface (str, optional): The IP address to listen to bittorrent connections on.
+            outgoing_interface (str, optional): The IP address to open outgoing BitTorrent connections on.
             interface (str, optional): The IP address the daemon will listen for UI connections on.
             port (int, optional): The port the daemon will listen for UI connections on.
             standalone (bool, optional): If True the client is in Standalone mode otherwise, if
@@ -98,6 +99,7 @@ class Daemon(object):
 
         # Start the core as a thread and join it until it's done
         self.core = Core(listen_interface=listen_interface,
+                         outgoing_interface=outgoing_interface,
                          read_only_config_keys=read_only_config_keys)
 
         if port is None:
@@ -115,7 +117,8 @@ class Daemon(object):
             interface=interface
         )
 
-        log.debug('Listening to UI on: %s:%s and bittorrent on: %s', interface, port, listen_interface)
+        log.debug('Listening to UI on: %s:%s and bittorrent on: %s Making connections out on: %s',
+                  interface, port, listen_interface, outgoing_interface)
 
     def start(self):
         # Register the daemon and the core RPCs
